# MiniLab

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  SingleAnalysis_GlobalContext.docx  UPDATES.md  environment.yaml  environment.yml  example.env  minilab_outline.md  pyproject.toml
.github/workflows/: ci.yml
MiniLab/: __init__.py
MiniLab/agents/: __init__.py  base.py  prompts.py  registry.py
MiniLab/bibliography/: __init__.py
MiniLab/config/: __init__.py  agent_flexibility.yaml  agents.yaml  agents_unified.yaml  budget_history.py  budget_manager.py  budgets.yaml  formatting_rubric.md  loader.py  minilab_config.py  team.yaml  team_loader.py  token_usage_learnings.md
MiniLab/context/: __init__.py  budget_enforcer.py  context_manager.py  embeddings.py  memory_manager.py  state_objects.py  vector_store.py
MiniLab/core/: __init__.py  budget_isolation.py  pdf.py  project_ssot.py  project_structure.py  project_writer.py  task_graph.py  taxonomy.py  token_account.py  token_context.py  token_learning.py
MiniLab/evaluation/: __init__.py
MiniLab/formatting/: __init__.py  nature_formatter.py
MiniLab/infrastructure/: __init__.py  errors.py  features.py
MiniLab/llm_backends/: __init__.py  anthropic_backend.py  base.py  cache.py  openai_backend.py
MiniLab/modules/: __init__.py  analysis_execution.py  base.py  build_report.py  citation_check.py  consult_external_expert.py  consultation.py  core_input.py  critical_review.py  evidence_gathering.py  formatting_check.py  generate_code.py  interpret_plot.py  interpret_stats.py  literature_review.py  one_on_one.py  plan_dissemination.py  planning.py  run_checks.py  sanity_check_data.py  team_discussion.py  write_artifact.py
MiniLab/orchestrator/: __init__.py  dag_orchestrator.py  orchestrator.py
MiniLab/orchestrators/: __init__.py  bohr_orchestrator.py  meetings.py  session_orchestrator.py  single_analysis.py  single_analysis_backup.py  single_analysis_v2.py
MiniLab/runtime/: __init__.py  meeting.py  orchestrator.py  runlog.py  taskgraph.py  verification.py
MiniLab/security/: __init__.py  path_guard.py  policy_engine.py  sandbox.py
MiniLab/storage/: __init__.py  state_store.py  transcript.py
MiniLab/tools/: __init__.py  arxiv.py  base.py  citation.py  code_editor.py  document.py  documentation.py  edit_session.py  environment.py  figure.py  filesystem.py  filesystem_advanced.py  filesystem_dual.py  gateway.py  knowledge_tools.py  mcp_adapter.py  namespaces.py  permission.py  prepared_invocation.py  pubmed.py  response_stream.py  system_tools.py  terminal.py  tool_factory.py  tool_selector.py  user_input.py  web_search.py  zotero.py
MiniLab/utils/: __init__.py  timing.py
MiniLab/workflows/: __init__.py  artifacts.py  base.py  consultation.py  critical_review.py  execute_analysis.py  literature_review.py  patterns.py  plan_dissemination.py  planning_committee.py  writeup_results.py
RECYCLING/: minilab_config.yaml  minilab_outline_v2.md
ReadData/Pluvicto/: clinical_cleaned.csv  combined_features_cleaned.csv  copy_number_cleaned.csv  genomic_cleaned.csv  mutations_cleaned.csv  outcomes_cleaned.csv  tfbs_cleaned.csv
Sandbox/: .gitkeep  README.md
Transcripts/: 2025-12-04_1557_single_analysis.txt  2025-12-05_1048_single_analysis.txt  2025-12-05_1410_single_analysis.txt  2025-12-23_0937_pluvicto_multimodal_survival_20251223.md
examples/: __init__.py  data_explore.py  lit_review.py
outputs/data_explore_20251223_131612/: provenance.json  runlog.jsonl  summary.md
outputs/lit_review_20251223_131612/: provenance.json  runlog.jsonl  summary.md
outputs/lit_review_20251223_131612/literature/: references.md  summary.md
scripts/: daily_digest.py  demo_agent_filesystem.py  manage_project.py  minilab.py  run_core_meeting.py  run_single_analysis.py  run_single_analysis_v2.py  run_triad_meeting.py  run_user_meeting.py  test_filesystem_tool.py
