[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minilab"
version = "0.4.0"
description = "MiniLab: multi-agent scientific lab assistant with RAG and workflow orchestration"
authors = [{ name = "Robert Patton" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Core
  "pyyaml>=6.0",
  "httpx>=0.27",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "rich>=13.0",
  
  # LLM
  "anthropic>=0.34",
  
  # Embeddings & Vector Store
  "sentence-transformers>=2.2",
  "faiss-cpu>=1.7",
  "numpy>=1.24",
  
  # Web/API
  "feedparser>=6.0",
  "tavily-python>=0.3",
  
  # Data & Visualization
  "networkx>=3.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
  
  # Async
  "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "types-PyYAML",
  "types-aiofiles",
]

[project.scripts]
minilab = "scripts.minilab:main"

# ============================================================
# Ruff configuration
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["MiniLab", "tests", "examples"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "ARG",    # flake8-unused-arguments
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "ARG001", # unused function argument (common in interfaces)
  "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["MiniLab"]

# ============================================================
# Mypy configuration
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "examples/", "Sandbox/"]

[[tool.mypy.overrides]]
module = "MiniLab.*"
disallow_untyped_defs = false

# ============================================================
# Pytest configuration
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.pytest_asyncio]
asyncio_mode = "auto"

# ============================================================
# Coverage configuration
# ============================================================
[tool.coverage.run]
source = ["MiniLab"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

